# gategroup-expiration-challenge

./: README.MD  app.py  nav.py  pyproject.toml  requirements.txt  start.sh
.streamlit/: config.toml
assets/: theme.css
config/: expirations_preparation.py
data/: add_noise_to_mock.py  data_quality_log.csv  data_with_risk.csv  expirations.xlsx  expirations_processed.csv  live_warehouse_state.csv  model_log.txt  waste_model.pkl  waste_training_history.csv  waste_training_history_noisy.csv
pages/: operational-inteligence.py  scenarios.py  waste.py
src/: data_preparation.py  risk_model.py  train_predict_waste.py
trainning/: daily_train_predict_waste.py
utils/: normalize_text_col.py  parse_expiry.py  predictive_ai.py  risk_utils.py  simulate_warehouse.py
