[project]
name = "caducidad-gategroup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "polars>=1.34.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-option-menu>=0.4.0",
]
